style: fix overflow text

--- a/blocks/photo/__description-text/photo__description-text.css
+++ b/blocks/photo/__description-text/photo__description-text.css
@@ -7,7 +7,6 @@
     padding-bottom: 31px;
     max-width: 246px;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-weight: 900;
