--- a/blocks/photo/__description/photo__description.css
+++ b/blocks/photo/__description/photo__description.css
@@ -1,3 +1,3 @@
-.photo__pub_description {
+.photo__description {
     background-color: #fff;
 }
